# py-gcp

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  pypi-publish.yml
py_gcp/: __init__.py  ase_calculator.py  cli.py  gcp.py  gcp_core.py
py_gcp/data/: fortran_params.json
tests/: test_py_gcp.py
tools/: bench_gcp.py  bench_gcp_pbc.py  bench_pbc_backends.py  bench_pbc_gcp.py  bench_suite.py  bench_torch_modes.py  extract_fortran_params.py  run_compare.py
